@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.587 2009/11/05 19:40:51 nm4 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.588 2009/11/06 13:29:47 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -147,6 +147,9 @@ NM/33 Bugzilla 898: Transport filter timeout fix
 
 NM/34 Bugzilla 901: Fix sign/unsigned and UTF mistmatches
       Patch by Serge Demonchaux
+
+NM/35 Bugzilla 39: Base64 decode bug fixes
+      Patch by Jakob Hirsch
 
 
 Exim version 4.69
